--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,9 +21,9 @@
       {% if site.github.is_project_page %}
         <a href="https://github.com/Doravado" class="btn">GitHub</a>
       {% endif %}
+      <a href="https://www.linkedin.com/in/samuel-zhao/" class="btn">LinkedIn</a>
       {% if site.show_downloads %}
-        <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
+        <a href="https://github.com/Doravado/samuel_portfolio/blob/main/image/Resume2023%20-%20Samuel%20Zhao.pdf" class="btn">Resume</a>
       {% endif %}
     </header>
 
