--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,10 +21,11 @@
       {% if site.show_downloads %}
         <a href="https://github.com/Doravado/samuel_portfolio/raw/main/image/Resume2023%20-%20Samuel%20Zhao.pdf" class="btn" download>&#x1F4DD Resume</a>
       {% endif %}
-      <a href="https://www.linkedin.com/in/samuel-zhao/" class="btn">&#x1F587 LinkedIn</a>
+      <a href="https://www.linkedin.com/in/samuel-zhao/" class="btn">&#x1F44B LinkedIn</a>
       {% if site.github.is_project_page %}
         <a href="https://github.com/Doravado" class="btn">&#x1F4BB GitHub</a>
       {% endif %}
+      <a href="https://www.instagram.com/sam_and_zhao/" class="btn">&#x1F606 Instagram</a>
     </header>
 
     <main id="content" class="main-content" role="main">
